--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bcrypt==4.0.1
 beautifulsoup4==4.12.2
 blinker==1.6.3
 click==8.1.7
+coverage==7.3.4
 decorator==5.1.1
 dnspython==2.4.2
 email-validator==2.0.0.post2
